Switch to base-dependencies

--- a/package.json
+++ b/package.json
@@ -19,14 +19,7 @@
   },
   "homepage": "https://github.com/sgohlke/fastify-example#readme",
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.49.0",
-    "@typescript-eslint/parser": "5.49.0",
-    "eslint": "8.32.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-modules-newline": "0.0.6",
-    "eslint-plugin-unicorn": "45.0.2",
-    "typescript": "4.9.4"
+    "@sgohlke/ts-base-dependencies": "1.0.0"
   },
   "dependencies": {
     "@dreamit/graphql-server": "3.1.0",
