--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sgohlke/ts-base-dependencies": "1.0.9"
   },
   "dependencies": {
-    "@dreamit/graphql-server": "file:dreamit-graphql-server-4.0.0.tgz",
+    "@dreamit/graphql-server": "4.0.0",
     "fastify": "4.17.0",
     "graphql": "16.6.0"
   }
