--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,3 +4,5 @@ on: push
 jobs:
   fastifyexample:
     uses: dreamit-de/workflows/.github/workflows/nodejs-ci.yml@main
+    with:
+      last-lts: ''
