--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@dreamit/graphql-server": "4.12.4",
+    "@dreamit/graphql-testing": "^0.1.1",
     "fastify": "5.2.1",
     "graphql": "16.10.0"
   }
